<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="7"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/textViewOperations"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_columnSpan="4"
            android:layout_columnWeight="3"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:height="150dp" />

        <TextView
            android:height="60dp"
            android:id="@+id/textViewResult"
            android:textAlignment="textEnd"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:textSize="23sp"
            android:textColor="@color/gray_text"
            android:layout_rowWeight="0.2" />

        <!--  Line-->
        <Button

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onDeleteBtnClick"
            android:text="@string/btnClearString"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btnMultString"
            android:textColor="@color/green_text"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onOperatorBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btnDivString"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/green_text"
            android:textSize="24sp"
            android:onClick="onOperatorBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />


        <Button
            android:textColor="@color/green_text"
            android:text="@string/btnLastSymbolClearString"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onDeleteLastSymbolBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <!--  Line-->
        <Button
            android:text="@string/btn7String"
            android:textSize="24sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btn8String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btn9String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btnMinusString"
            android:textColor="@color/green_text"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onOperatorBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />


        <!-- Line-->
        <Button

            android:text="@string/btn4String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btn5String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btn6String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btnPlusString"
            android:textColor="@color/green_text"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onOperatorBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <!-- Line-->

        <Button
            android:text="@string/btn1String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btn2String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btn3String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="OnNumberBtnClick"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />

        <!-- Line -->
        <Button
            android:text="@string/btnEqualString"
            android:backgroundTint="@color/green_back"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:onClick="onEqualBtnClick"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:text="@string/btn0String"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:onClick="OnNumberBtnClick"
            android:layout_marginTop="0dp" />

        <Button
            android:text="@string/btnPointString"
            android:textSize="24sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onPointBtnClick"
            android:layout_marginTop="0dp" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>